rusty-cdk-macros/tests/fails/visibility_timeout_boundary_high.rs
use rusty_cdk_macros::visibility_timeout;

fn example() {
    let timeout = visibility_timeout!(43201);
}

fn main() {}